# apconui

./: README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
.mimocode/command/: commit-release.md
auto-logs/: report-2026-06-15T23-26-40-403Z.md  report-2026-06-17T22-02-53-590Z.md  report-2026-06-17T22-06-22-659Z.md  report-2026-06-19T02-01-24-340Z.md  report-2026-06-19T03-03-07-626Z.md  report-2026-06-19T03-03-26-383Z.md  report-2026-06-19T20-00-31-456Z.md  report-2026-06-20T00-02-11-473Z.md  report-2026-06-20T02-01-24-869Z.md  report-2026-06-20T04-00-34-779Z.md  state.json
scripts/: auto-improve.mjs
src/: App.css  App.tsx  index.css  types.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: docker_proxy.rs  lib.rs  main.rs
src/components/: BuildImageModal.tsx  ContainerDetail.tsx  ContainersTab.tsx  CreateMachineModal.tsx  CreateNetworkModal.tsx  CreateVolumeModal.tsx  DetailRow.tsx  DetailSection.tsx  FileEditorModal.tsx  ImageDetail.tsx  ImagesTab.tsx  InspectModal.tsx  LogsModal.tsx  MachinesTab.tsx  MigrationTab.tsx  Modal.tsx  NetworksTab.tsx  PullImageModal.tsx  PushImageModal.tsx  RunContainerModal.tsx  SettingsTab.tsx  Sidebar.tsx  TagImageModal.tsx  TaskPanel.tsx  TerminalTab.tsx  VolumesTab.tsx
src/hooks/: useConfirm.ts  useContainers.ts  useImages.ts  useMachines.ts  useNetworks.ts  useToast.ts  useVolumes.ts
src/i18n/: index.ts
src/i18n/locales/: de.json  en.json  fr.json  ja.json  zh.json
