[package]
name = "apconui"
version = "0.5.0"
description = "Apple Container Manager - Tauri Desktop App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", default-features = false, features = ["wry"] }
tokio = { version = "1", features = ["rt", "net", "io-util"] }
libc = "0.2"
open = "5"

[workspace]
